# HW4-int2048-2022

./: .gitignore  CMakeLists.txt  build.sh  generate.sh  submit.h  test.sh
.cache/clangd/index/: gmock-actions.h.3F5F5A033CF8FE86.idx  gmock-actions.h.9735AA1492B9E60B.idx  gmock-all.cc.11042DDAA6457EF3.idx  gmock-all.cc.8F3B328F395B5658.idx  gmock-cardinalities.cc.2B401E7D86E27A0F.idx  gmock-cardinalities.cc.B5CE52171DD0B16C.idx  gmock-cardinalities.h.257DFEE204B3BE16.idx  gmock-cardinalities.h.34B1C8C4808395DA.idx  gmock-function-mocker.h.A246067BF78BA8EF.idx  gmock-function-mocker.h.E004872BE0B98983.idx  gmock-generated-actions.h.AAAF99C92F11E77E.idx  gmock-generated-actions.h.FAE1D966E4B07163.idx  gmock-internal-utils.cc.0BE60D8D9F028073.idx  gmock-internal-utils.cc.4467448D7701430D.idx  gmock-internal-utils.h.024F8B4ABC0BC481.idx  gmock-internal-utils.h.756D8939225022A6.idx  gmock-matchers.cc.27ED87E16D32B807.idx  gmock-matchers.cc.87393A0E0D2AD683.idx  (+111 more)
data/Integer1/: 1.cpp  2.cpp  4.cpp  5.cpp
data/Integer2/: 1.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  15.cpp  16.cpp  17.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp
docs/: 1.drawio  sol.tex
include/BigInteger/: int2048.h
include/int2048/: int2048.h  utils.h
src/: CMakeLists.txt  int2048.cc  int2048.cpp  main.cpp  utils.cc
test/: 6.out  CMakeLists.txt  P1919_2.out  makedata.cpp  runtest.sh  tempCodeRunnerFile.cpp  test.cc  test.cpp  test.in  test.out  test1.cpp  test2.cpp
test/Integer1/: 1.cpp  3.cpp  5.cpp
test/Integer2/: 16.cpp  18.cpp  2.cpp  3.cpp  4.cpp  5.cpp  8.cpp
